err
device_func.cpp: In function ‘void shake_offline(int, int, char*)’:
device_func.cpp:126:16: error: return-statement with a value, in function returning 'void' [-fpermissive]
         return false;
                ^
device_func.cpp:129:10: error: return-statement with a value, in function returning 'void' [-fpermissive]
   return true;
          ^
device_func.cpp: In function ‘void control_delay(int)’:
device_func.cpp:181:1: error: expected ‘;’ before ‘}’ token
 }
 ^
device_func.cpp: In function ‘void control_avtrans(int, uint8_t*)’:
device_func.cpp:249:22: error: declaration of ‘uint8_t buf [25606]’ shadows a parameter
     uint8_t buf[25606];
                      ^
make: *** [device_func.o] Error 1
